Name:			ReaktorDevDay2012
Version:		0.0
Description:	Stuff from Reaktor Dev Day 2012
Author:			Ilkka Laukkanen
Build-Type:		Simple
Cabal-Version:	>= 1.2

Executable helloworld
    Main-is:	HelloWorld.hs
    Build-Depends: base

Executable wc
    Main-is: WC.hs
    Build-Depends: base

Executable uniq
    Main-is: Uniq.hs
    Build-Depends: base